tests/baselines/reference/assignmentCompatWithOverloads.errors.txt
tests/cases/compiler/assignmentCompatWithOverloads.ts(17,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type '(s1: 文字) => 数字'.
  Type '文字' is not assignable to type '数字'.
tests/cases/compiler/assignmentCompatWithOverloads.ts(19,1): error TS2322: Type '(x: 数字) => 数字' is not assignable to type '(s1: 文字) => 数字'.
  Types of parameters 'x' and 's1' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/compiler/assignmentCompatWithOverloads.ts(21,1): error TS2322: Type '{ (x: 文字): 文字; (x: 数字): 数字; }' is not assignable to type '(s1: 文字) => 数字'.
  Type '文字' is not assignable to type '数字'.
tests/cases/compiler/assignmentCompatWithOverloads.ts(30,1): error TS2322: Type '类为 C' is not assignable to type '新建 (x: 数字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/assignmentCompatWithOverloads.ts (4 errors) ====
    function f1(x: string): number { return null; }
    
    function f2(x: string): string { return null; }
    
    function f3(x: number): number { return null; }
    
    function f4(x: string): string;
    
    function f4(x: number): number;
    
    function f4(x: any): any { return undefined; }
    
    var g: (s1: string) => number;
    
    g = f1; // OK 
    
    g = f2; // Error
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type '(s1: 文字) => 数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.
    
    g = f3; // Error
    ~
!!! error TS2322: Type '(x: 数字) => 数字' is not assignable to type '(s1: 文字) => 数字'.
!!! error TS2322:   Types of parameters 'x' and 's1' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    
    g = f4; // Error
    ~
!!! error TS2322: Type '{ (x: 文字): 文字; (x: 数字): 数字; }' is not assignable to type '(s1: 文字) => 数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.
    
    class C {
        constructor(x: string);
    constructor(x: any) {}
    }
    
    var d: new(x: number) => void;
    
    d = C; // Error
    ~
!!! error TS2322: Type '类为 C' is not assignable to type '新建 (x: 数字) => 无值'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.